[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medtriage-rl"
version = "0.1.0"
description = "A medical emergency department triage RL environment."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "requests>=2.25.0",
    "openai>=1.0.0",
    "openenv-core>=0.2.0",
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
server = "server.app:main"